--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,9 +2,7 @@
   "name": "Spring Boot DevContainer",
   "image": "mcr.microsoft.com/devcontainers/java:1-21-bullseye",
   "features": {
-    "ghcr.io/devcontainers/features/maven:1": {
-      "version": "3.9"
-    }
+    "ghcr.io/devcontainers-extra/features/maven-sdkman": {}
   },
   "postCreateCommand": "mvn -q -ntp dependency:go-offline",
   "forwardPorts": [8080],
