--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
   "name": "Spring Boot DevContainer",
+  "runArgs": ["--name", "Spring-Boot-DevContainer"],
   "image": "mcr.microsoft.com/devcontainers/java:1-21-bullseye",
   "postCreateCommand": "sudo apt-get update && sudo apt-get install -y maven && mvn -q -ntp dependency:go-offline",
   "forwardPorts": [8080],
