--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,12 @@
-# Maven
-/target/
-!.mvn/wrapper/maven-wrapper.jar
-
-# IDEs
-.idea/
-.project
-.classpath
-.settings/
-*.iml
-
-# VS Code
+# Python
+__pycache__/
+*.py[cod]
+*.egg-info/
+.venv/
+.env
+# Editors
 .vscode/
-
+.idea/
 # OS Files
 .DS_Store
 Thumbs.db
